--- a/style/_main.scss
+++ b/style/_main.scss
@@ -11,6 +11,10 @@
 }
 #title__color{
     color: $purple-color;
+    font-size: 35px;
+    text-align: center;
+    line-height: 50px;
+    margin-top: 50px;
 }
 .change__color{
     color: $aqua-font-color;
