--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -21,6 +21,9 @@
     margin-top: 30px;
     position: center;
 }
+#title__trending{
+    color: $purple-color;
+}
 //Slideshow
 .slideshow-container {
     max-width: 1127px;
