--- a/style/mygifs.css
+++ b/style/mygifs.css
@@ -11,17 +11,13 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
-  font-size: 35px;
-  text-align: center;
-  line-height: 50px;
-  margin-top: 50px;
+  font-size: 25px;
 }
 
 h2 {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 25px;
-  color: #572EE5;
   text-align: center;
   line-height: 30px;
 }
@@ -33,7 +29,7 @@ h3 {
   color: #572EE5;
   text-align: center;
   line-height: 25px;
-  margin-top: 100px;
+  margin-top: 20px;
 }
 
 h4 {
@@ -222,6 +218,10 @@ label {
 
 #title__color {
   color: #572EE5;
+  font-size: 35px;
+  text-align: center;
+  line-height: 50px;
+  margin-top: 50px;
 }
 
 .change__color {
@@ -234,6 +234,12 @@ label {
   width: 100%;
 }
 
+.container_search {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
 .search {
   display: flex;
   align-items: center;
@@ -243,6 +249,7 @@ label {
   padding: 10px;
   height: 30px;
   width: 551px;
+  margin-left: 15%;
   border-radius: 50px;
   border: 1px solid #572EE5;
 }
@@ -270,70 +277,85 @@ label {
   background: none;
 }
 
+.gifos__results {
+  display: none;
+}
+
+.results {
+  columns: 4;
+  column-gap: 1em;
+}
+
+.item {
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+#results {
+  width: calc(200px*4 + 3em);
+}
+
 .trending {
   background-color: #F3F5F8;
   height: 640px;
   width: 1440px;
-}
-
-#title__margin {
-  margin-top: 67px;
+  margin-top: 50px;
 }
 
 #trending__description {
   font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+.trending__gifs {
+  margin-top: 4%;
+}
+
+.trending__header {
+  margin-top: 30px;
+  position: center;
+}
+
+#title__trending {
+  color: #572EE5;
 }
 
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 1127px;
   position: relative;
   margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.mySlydes {
-  display: none;
-}
-
-.prev .next {
+.prev, .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
+  margin-top: -30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  width: 8px;
+  color: #572EE5;
+  border-style: solid;
+  border-width: 2px;
+  font-size: 14px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
   user-select: none;
 }
 
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
 .prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+  background-color: #572EE5;
+  color: white;
+  border-color: #572EE5;
 }
 
 .fade {
@@ -394,5 +416,30 @@ footer :hover {
     padding-top: 0;
     padding-bottom: 31px;
   }
+}
+
+.title-mygifs {
+  color: #572EE5;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 2px;
+}
+
+#default-msg {
+  font-size: 22px;
+  color: #5ED7C6;
+}
+
+.fav-mygifs-empty-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 5%;
+}
+
+#icon-mygifs-sin-contenido {
+  width: 151px;
+  height: 150px;
+  margin-left: 45%;
 }
 /*# sourceMappingURL=mygifs.css.map */
