--- a/style/create_gifo.scss
+++ b/style/create_gifo.scss
@@ -22,3 +22,40 @@
 //Footer 
 @import "_footer.scss";
 
+.camera-display{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    margin-left: 10.8%;
+}
+.create-gifo-container{
+    border: 1px solid $purple-color;
+    width: 688px;
+    height: 390px;
+}
+
+.tapes-container{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: -8%;
+    margin-left: 5%;
+    border-collapse: collapse;
+    position: relative;
+}
+
+.tapes-cam-container{
+    display: flex;
+    flex-direction: column;
+    //margin-top: 30%;
+    width: 123px;
+    height: 162px;
+}
+
+#tape-animation1 {
+    width: 30%;;
+    margin-top:20%;
+}
+#tape-animation2{
+    width: 50%
+}
+
