Numbers buttons and bar correct size

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -19,6 +19,11 @@ footer{
     width: 15%;
     
   }
+  .footer-font{
+    font-weight: 400;
+    color: $black-font-color;
+    text-align: center;
+  }
   /*#icon__color{
     color:grey
   }
