--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -13,6 +13,9 @@
     font-size: 18px;
     margin-top: 10px;
     margin-bottom: 50px;
+    font-weight: 400;
+    color: $black-font-color;
+    text-align: center;
 }
 .trending__gifs{
     margin-top: 4%;
