--- a/style/create_gifo.scss
+++ b/style/create_gifo.scss
@@ -29,7 +29,7 @@
     margin-left: 10.8%;
 }
 .create-gifo-container{
-    border: 1px solid $purple-color;
+    border: 1.5px solid $purple-color;
     width: 688px;
     height: 390px;
 }
@@ -41,21 +41,67 @@
     margin-left: 5%;
     border-collapse: collapse;
     position: relative;
+    
 }
-
+.camera-container{
+    margin-top: 8%;
+    display: flex;
+    flex-direction: row;
+}
 .tapes-cam-container{
     display: flex;
     flex-direction: column;
     //margin-top: 30%;
     width: 123px;
     height: 162px;
+    
 }
 
 #tape-animation1 {
     width: 30%;;
     margin-top:20%;
+    opacity: 100%;
 }
 #tape-animation2{
-    width: 50%
+    width: 50%;
+    opacity: 100%;
 }
-
+.light{
+    margin-top: 15%;
+    opacity: 50%;
+    width: 91px;
+    height: 151px;
+}
+#num-bar-container{
+    display: flex;
+    flex-direction: column;
+} 
+.numbers-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+#button-number{
+    color: $purple-color;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    border: 1px solid $purple-color;
+    background: none;
+    
+}
+.button-number-font{
+    color: $purple-color;
+    font-size: 18px;
+    margin: 0;
+}
+.bottom-camera-display{
+    display: flex;
+    flex-direction: row;
+}
+.bottom-bar{
+    width: 795.9px;
+    height: 6.9px;
+    background-color: $purple-color;
+    border-radius: 30px;
+}
