--- a/style/my-gifs.css
+++ b/style/my-gifs.css
@@ -44,9 +44,6 @@ h4 {
 
 h5 {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  color: black;
-  text-align: center;
 }
 
 hr {
@@ -306,6 +303,9 @@ label {
   font-size: 18px;
   margin-top: 10px;
   margin-bottom: 50px;
+  font-weight: 400;
+  color: black;
+  text-align: center;
 }
 
 .trending__gifs {
@@ -394,6 +394,12 @@ footer :hover {
   color: grey;
   letter-spacing: 0;
   width: 15%;
+}
+
+.footer-font {
+  font-weight: 400;
+  color: black;
+  text-align: center;
 }
 
 /*#icon__color{
