numbers buttons in right position, aldo repetir captura correct size

--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -27,6 +27,12 @@
 #title__trending{
     color: $purple-color;
 }
+#trending-font{
+    font-size: 18px;
+    line-height: 25px;
+    margin-top: 20px;
+}
+
 //Slideshow
 .slideshow-container {
     max-width: 1127px;
