--- a/style/my-gifs.css
+++ b/style/my-gifs.css
@@ -25,11 +25,8 @@ h2 {
 h3 {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
-  font-size: 18px;
   color: #572EE5;
   text-align: center;
-  line-height: 25px;
-  margin-top: 20px;
 }
 
 h4 {
@@ -319,6 +316,12 @@ label {
 
 #title__trending {
   color: #572EE5;
+}
+
+#trending-font {
+  font-size: 18px;
+  line-height: 25px;
+  margin-top: 20px;
 }
 
 .slideshow-container {
