--- a/style/favorites.css
+++ b/style/favorites.css
@@ -19,7 +19,6 @@ h2 {
   font-weight: 600;
   font-size: 25px;
   text-align: center;
-  line-height: 30px;
 }
 
 h3 {
@@ -289,6 +288,27 @@ label {
   width: calc(200px*4 + 3em);
 }
 
+.gral-button {
+  display: none;
+  position: absolute;
+  margin-left: 25%;
+  margin-top: 2%;
+}
+
+.gral-button :hover {
+  background-color: #572EE5;
+  color: #FFFFFFFF;
+}
+
+.button-format {
+  background: none;
+  color: none;
+  border-radius: 50px;
+  border: 0.5px solid #572EE5;
+  height: 50px;
+  width: 127px;
+}
+
 .trending {
   background-color: #F3F5F8;
   height: 640px;
@@ -316,6 +336,7 @@ label {
 
 #title__trending {
   color: #572EE5;
+  line-height: 30px;
 }
 
 #trending-font {
