html validator, until line 47

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -101,7 +101,7 @@
     }
     
 }
-.button-format{ // this can be in general style
+#button-format{ // this can be in general style
     background: none;
     color: none;
     border-radius: 50px;
