--- a/style/create_gifo.css
+++ b/style/create_gifo.css
@@ -522,7 +522,7 @@ footer :hover {
   margin-left: 30%;
 }
 
-#button-number {
+.button-number {
   color: #572EE5;
   border-radius: 50%;
   width: 32px;
@@ -530,12 +530,9 @@ footer :hover {
   border: 1px solid #572EE5;
   background: none;
   margin-left: 5%;
-}
-
-.button-number-font {
+  font-family: "Roboto", sans-serif;
   color: #572EE5;
   font-size: 18px;
-  margin: 0;
 }
 
 .bottom-camera-display {
@@ -577,7 +574,7 @@ footer :hover {
   margin-bottom: 3px;
 }
 
-#create-subtitle {
+.create-subtitle {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: black;
