Style in trending buttons ok. LocalStorage is not working well.

--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -96,4 +96,8 @@
     from {opacity: .4}
     to {opacity: 1}
 }
-
+.buttons-container{
+    position: absolute;
+    margin-left:20%;
+    margin-top: 1%;
+ }
