JS modules, icons in favorites. All the favorites in 4 columns.

--- a/style/create_gifo.css
+++ b/style/create_gifo.css
@@ -342,7 +342,7 @@ label {
 #trending-font {
   font-size: 18px;
   line-height: 25px;
-  margin-top: 20px;
+  margin-top: 5%;
 }
 
 .slideshow-container {
