--- a/style/my-gifs.css
+++ b/style/my-gifs.css
@@ -342,7 +342,7 @@ label {
 #trending-font {
   font-size: 18px;
   line-height: 25px;
-  margin-top: 20px;
+  margin-top: 5%;
 }
 
 .slideshow-container {
