--- a/style/favorites.css
+++ b/style/favorites.css
@@ -484,7 +484,10 @@ footer :hover {
 }
 
 .galery {
-  columns: 4;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 200px 200px 200px 200px;
+  grid-template-rows: 260px 260px 260px 260px;
 }
 
 .favorites-container {
