favorites style ok, with layer and hover.

--- a/backups/_main copy.scss
+++ b/backups/_main copy.scss
@@ -61,6 +61,13 @@
     background: none;
 }
 
+
+//Search gallery
+.search-container{
+    display :flex;
+    justify-content: flex-end;
+}
+
 //Trending
 .trending {
     display: flex;
