--- a/style/_main.scss
+++ b/style/_main.scss
@@ -81,10 +81,10 @@
     columns: 4;
     column-gap: 1em;
 }
-.item {
+/*.item { comentado por prueba en favoritos
     margin-bottom: 1em;
     margin-top: 1em;
-}
+}*/
 #results{
    width: calc(200px*4 + 3em);
 }
