--- a/style/favorites.css
+++ b/style/favorites.css
@@ -279,11 +279,10 @@ label {
   column-gap: 1em;
 }
 
-.item {
-  margin-bottom: 1em;
-  margin-top: 1em;
-}
-
+/*.item { comentado por prueba en favoritos
+    margin-bottom: 1em;
+    margin-top: 1em;
+}*/
 #results {
   width: calc(200px*4 + 3em);
 }
@@ -484,16 +483,89 @@ footer :hover {
 }
 
 .galery {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: 200px 200px 200px 200px;
-  grid-template-rows: 260px 260px 260px 260px;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  max-width: 80%;
+  margin-left: 10%;
 }
 
-.favorites-container {
-  position: relative;
+.img-layer {
+  width: 260px;
+  height: 200px;
+  display: flex;
+  justify-content: flex-end;
+  margin-left: -260px;
+  opacity: 0;
+  transition: all .3s ease-in-out;
+}
+
+.img-layer:hover {
+  background-color: #572EE5;
+  opacity: 0.7;
+  width: 260px;
+  height: 200px;
+}
+
+#icons-layer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
+  margin-right: 2%;
 }
+
+.icons-layer {
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  margin-right: 4%;
+  margin-top: 5%;
+  border: none;
+  border-radius: 6px;
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+/*.favorites-container{ //este es el container que ubica los botones de las imagenes
+    //max-width: 1127px;
+    position: relative;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    //justify-content: space-between;
+}*/
+/*.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 2.1rem;
+    grid-row-gap: 2.5rem;
+    margin: 0 auto;
+}
+. galery 
+//margin-left: 20%;
+   // width: 100%;
+    
+   // grid-template-columns: 200px 200px 200px 200px;
+  //  grid-template-rows: 260px 260px 260px 260px;
+   // grid-template-columns:repeat(4, 200px);
+   // grid-template-rows: 260px;
+    //height: 250px;
+    //width: 200px;
+    //grid-template-columns: 200px 100px 200px;
+    //grid-template-rows: 250px auto 250px; 
+    //column-gap: 10px;
+  //  row-gap: 15px;
+    //justify-content: space-between;
+    //row-gap: 10px ;
+  //  column-gap: 10px;
+.grid img {
+    width: 156px;
+    height: 120px;
+    margin: 0 auto;
+}*/
 /*# sourceMappingURL=favorites.css.map */
