--- a/style/favorites.scss
+++ b/style/favorites.scss
@@ -48,13 +48,80 @@
     display: none;
 }
 .galery{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 80%; 
+    margin-left: 10%; 
+}
 
-   
-    //columns: 4;
-        display: grid;
-        justify-content: center;
-        grid-template-columns: 200px 200px 200px 200px;
-        grid-template-rows: 260px 260px 260px 260px;
+.img-layer{
+    width: 260px;
+    height: 200px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: -260px; //-19%;
+    opacity: 0;
+    transition: all .3s ease-in-out;  
+}
+.img-layer:hover {
+    background-color: $purple-color;
+    opacity: 0.7;
+    width: 260px;
+    height: 200px;
+}
+
+#icons-layer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+.icons-layer {
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin-right: 4%;
+    margin-top: 5%;
+    border:none;
+    border-radius: 6px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+//.img-layer:hover
+
+
+/*.favorites-container{ //este es el container que ubica los botones de las imagenes
+    //max-width: 1127px;
+    position: relative;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    //justify-content: space-between;
+}*/
+
+///prueba layer con iconos
+
+//style= "background: none; border:none; margin-top: 1.5rem; margin-left: 2rem;  display: flex; justify-content: flex-end"
+
+/*.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 2.1rem;
+    grid-row-gap: 2.5rem;
+    margin: 0 auto;
+}
+. galery 
+//margin-left: 20%;
+   // width: 100%;
+    
+   // grid-template-columns: 200px 200px 200px 200px;
+  //  grid-template-rows: 260px 260px 260px 260px;
    // grid-template-columns:repeat(4, 200px);
    // grid-template-rows: 260px;
     //height: 250px;
@@ -66,13 +133,8 @@
     //justify-content: space-between;
     //row-gap: 10px ;
   //  column-gap: 10px;
-}
-
-.favorites-container{
-    //max-width: 1127px;
-    position: relative;
-   // margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+.grid img {
+    width: 156px;
+    height: 120px;
+    margin: 0 auto;
+}*/
