--- a/style/style.css
+++ b/style/style.css
@@ -279,11 +279,10 @@ label {
   column-gap: 1em;
 }
 
-.item {
-  margin-bottom: 1em;
-  margin-top: 1em;
-}
-
+/*.item { comentado por prueba en favoritos
+    margin-bottom: 1em;
+    margin-top: 1em;
+}*/
 #results {
   width: calc(200px*4 + 3em);
 }
