style search same than favorites

--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -101,3 +101,42 @@
     margin-left:20%;
     margin-top: 1%;
  }
+
+ .img-layer-trending{
+    width: 357px;
+    height: 275px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: -357px; //-19%;
+    opacity: 0;
+    transition: all .3s ease-in-out;  
+}
+.img-layer-trending:hover {
+    background-color: $purple-color;
+    opacity: 0.7;
+    width: 357px;
+    height: 275px;
+}
+
+#icons-layer-trending {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+.icons-layer-trending {
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin-right: 4%;
+    margin-top: 5%;
+    border:none;
+    border-radius: 6px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
