--- a/style/_main.scss
+++ b/style/_main.scss
@@ -36,13 +36,12 @@
 .search {
     display: flex;
     align-items: center;
-    position: relative;
     top: 66.6%;
     background-color: $background-color;
     padding: 10px;
     height: 30px;
     width: 551px;
-    margin-left: 15%;
+    margin-left: 10%;
     border-radius: 50px;
     border: 1px solid $purple-color;
 
@@ -76,18 +75,19 @@
 }
 
 //Search Results 
-
 .results{
-    columns: 4;
-    column-gap: 1em;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 70%; 
+    margin-left: 10%;  
 }
+
 /*.item { comentado por prueba en favoritos
     margin-bottom: 1em;
     margin-top: 1em;
 }*/
-#results{
-   width: calc(200px*4 + 3em);
-}
+
 
 .gral-button{
     display: none; //should be block when the search appear.
@@ -110,6 +110,44 @@
     width: 127px;
 }
 
+.img-layer{
+    width: 260px;
+    height: 200px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: -260px; //-19%;
+    opacity: 0;
+    transition: all .3s ease-in-out;  
+}
+.img-layer:hover {
+    background-color: $purple-color;
+    opacity: 0.7;
+    width: 260px;
+    height: 200px;
+}
+
+#icons-layer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+.icons-layer {
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin-right: 4%;
+    margin-top: 5%;
+    border:none;
+    border-radius: 6px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
 
 //Responsive//
 @media only screen and (max-width: 480px) {
