--- a/style/favorites.css
+++ b/style/favorites.css
@@ -347,7 +347,6 @@ label {
   outline: inherit;
 }
 
-/* The Modal (background) */
 .modal {
   display: none;
   /* Hidden by default */
@@ -356,42 +355,47 @@ label {
   z-index: 1;
   /* Sit on top */
   left: 0;
-  top: 0;
-  width: 100%;
+  top: 1;
+  width: 50%;
   /* Full width */
-  height: 100%;
+  height: 50%;
   /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
   background-color: black;
   /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  /* 15% from the top and centered */
-  padding: 20px;
+.modal-container {
+  background-color: #685050;
   border: 1px solid #888;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   /* Could be more or less, depending on screen size */
 }
 
-.close {
-  color: #aaa;
+.modal-container .close {
+  color: black;
   float: right;
-  font-size: 28px;
+  font-size: 200px;
   font-weight: bold;
+  display: flex;
+  justify-content: flex-start;
 }
 
-.close:hover,
+.close:hover {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.mySlidesModal {
+  display: flex;
+  justify-content: center;
 }
 
 .trending {
