--- a/style/create_gifo.css
+++ b/style/create_gifo.css
@@ -6,6 +6,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #FFFFFFFF;
+  transition: .3s ease all;
+}
+
+body.dark {
+  background-color: #37383C;
 }
 
 h1 {
@@ -40,6 +46,14 @@ h4 {
 
 h5 {
   font-family: "Roboto", sans-serif;
+}
+
+h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  color: #FFFFFFFF;
+  text-align: center;
 }
 
 .hide {
@@ -666,6 +680,7 @@ footer :hover {
   background: none;
   margin-left: 5%;
   font-family: "Roboto", sans-serif;
+  font-weight: medium;
   color: #572EE5;
   font-size: 18px;
 }
@@ -678,6 +693,7 @@ footer :hover {
   background: #572EE5;
   margin-left: 5%;
   font-family: "Roboto", sans-serif;
+  font-weight: medium;
   color: #FFFFFFFF;
   font-size: 18px;
 }
@@ -699,10 +715,25 @@ footer :hover {
   margin-top: -20%;
 }
 
+.timer-container {
+  display: block;
+  font-size: 15px;
+  letter-spacing: 0;
+  margin-right: 10%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #572EE5;
+}
+
 #repeat-gif {
   font-size: 13px;
   letter-spacing: 0;
   display: none;
+  margin-right: 10%;
+}
+
+#repeat-gif:hover {
+  text-decoration: underline #5ED7C6 3px;
 }
 
 .text-gifo-container {
@@ -730,34 +761,44 @@ footer :hover {
   margin-top: 0%;
 }
 
-.control-button {
+#start {
   display: block;
   margin-left: 43%;
   margin-top: -4%;
+  background: none;
+  border-radius: 50px;
+  border: 1px solid #572EE5;
+  height: 50px;
+  width: 127px;
+  font-size: 13px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #572EE5;
 }
 
-.control-button :hover {
+#start:hover {
   background-color: #572EE5;
   color: #FFFFFFFF;
 }
 
-#start {
-  background: none;
-  color: none;
-  border-radius: 50px;
-  border: 0.5px solid #572EE5;
-  height: 50px;
-  width: 127px;
-}
-
 #record {
   display: none;
+  margin-left: 43%;
+  margin-top: -4%;
   background: none;
-  color: none;
   border-radius: 50px;
-  border: 0.5px solid #572EE5;
+  border: 1px solid #572EE5;
   height: 50px;
   width: 127px;
+  font-size: 13px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #572EE5;
+}
+
+#record:hover {
+  background-color: #572EE5;
+  color: #FFFFFFFF;
 }
 
 #upload {
@@ -765,13 +806,25 @@ footer :hover {
   background: none;
   color: none;
   border-radius: 50px;
-  border: 0.5px solid #572EE5;
+  border: 1px solid #572EE5;
   height: 50px;
   width: 127px;
+  margin-left: 43%;
+  margin-top: -4%;
+  font-size: 13px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #572EE5;
+}
+
+#upload:hover {
+  background-color: #572EE5;
+  color: #FFFFFFFF;
 }
 
 .uploadMessage {
   display: none;
+  flex-direction: column;
   width: 688px;
   height: 390px;
   justify-content: center;
@@ -790,9 +843,6 @@ footer :hover {
   display: none;
   width: 688px;
   height: 390px;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
   background-color: #572EE5;
   opacity: 0.7;
   margin-left: -691px;
@@ -813,6 +863,8 @@ footer :hover {
   display: flex;
   justify-content: flex-end;
   margin-left: 85%;
+  margin-bottom: 20%;
+  margin-top: 3px;
 }
 
 .icons-layer-gifo {
