--- a/style/_main.scss
+++ b/style/_main.scss
@@ -9,12 +9,17 @@
 #break__desktop{
     display: block;
 }
-#title__color{
+
+.title__color{
     color: $purple-color;
     font-size: 35px;
     text-align: center;
     line-height: 50px;
     margin-top: 50px;
+    &.dark {
+        color: red;
+    }
+    
 }
 .change__color{
     color: $aqua-font-color;
