--- a/style/favorites.css
+++ b/style/favorites.css
@@ -55,7 +55,6 @@ h5 {
 hr {
   display: flex;
   align-items: center;
-  width: 1440px;
   height: 5px;
   background-color: #572EE5;
   margin-top: 0;
@@ -544,16 +543,24 @@ label {
   outline: inherit;
 }
 
-footer {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 156px;
-  margin-right: 158px;
-  font-size: 13px;
+.footer-container {
+  margin-bottom: 1%;
 }
 
-footer :hover {
-  color: #572EE5;
+.social-media {
+  color: grey;
+  margin-left: 20px;
+}
+
+.social-media.dark {
+  color: red;
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-left: 10.83%;
 }
 
 #icons {
@@ -563,35 +570,30 @@ footer :hover {
   font-family: FontAwesome5Brands-Regular;
   color: grey;
   letter-spacing: 0;
-  width: 15%;
+}
+
+#icons :hover {
+  color: #572EE5;
 }
 
 .footer-font {
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 13px;
   color: black;
   text-align: center;
 }
 
-/*#icon__color{
-    color:grey
-  }
-  #icon__color:hover{
-    color: $purple-color;
-  }*/
-@media only screen and (max-width: 480px) {
-  footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  #icons {
-    display: flex;
-    justify-content: space-around;
-    font-size: 16px;
-    width: 100%;
-    padding-top: 0;
-    padding-bottom: 31px;
-  }
+.footer-font.dark {
+  color: red;
+}
+
+.media-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyright {
+  margin-right: 10.83%;
 }
 
 .title-favoritos {
