--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,49 +1,53 @@
-footer{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 156px;
-    margin-right: 158px;
-    font-size: 13px;
-    :hover{
-      color: $purple-color;
-    }
-    
+.footer-container{
+  margin-bottom: 1%;
+}
+.social-media{
+  color:grey;
+  margin-left: 20px;
+  &.dark{
+    color:red;
   }
-  #icons { 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: FontAwesome5Brands-Regular;
-    color:grey;
-    letter-spacing: 0;
-    width: 15%;
-    
-  }
-  .footer-font{
-    font-weight: 400;
-    color: $black-font-color;
-    text-align: center;
-  }
-  /*#icon__color{
-    color:grey
-  }
-  #icon__color:hover{
-    color: $purple-color;
-  }*/
+}
 
-  @media only screen and (max-width: 480px) {
-    footer {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      }
-    #icons { 
-      display: flex;
-      justify-content: space-around;
-      font-size: 16px;
-      width: 100%;
-      padding-top: 0;
-      padding-bottom: 31px;
-    }
-  }  
+.icon-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-left: 10.83% ;
+}
+
+#icons { 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: FontAwesome5Brands-Regular;
+  color:grey;
+  letter-spacing: 0;
+  :hover{
+    color: $purple-color;
+  }
+}
+
+.footer-font{
+  font-weight: 500;
+  font-size: 13px;
+  color: $black-font-color;
+  text-align: center;
+  &.dark{
+    color:red;
+  }
+}
+  
+.media-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyright{
+  margin-right: 10.83%;
+}
+
+@media only screen and (max-width: 480px) {
+    
+}  
   
