--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -2,7 +2,7 @@
 hr{
   display: flex;
   align-items: center;
-  width: 1440px;
+  //width: 1440px;
   height: 5px;
   background-color: $purple-color;
   margin-top: 0;
